--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Boys -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'India -- Juvenile fiction'
+- GITenberg
 title: Little Black Sambo
 url: http://www.gutenberg.org/ebooks/17824
